--- a/index.html
+++ b/index.html
@@ -925,9 +925,6 @@ productGrid.addEventListener('click', e => {
   $('pdPrice').innerText =
   card.querySelector('.price-new')?.innerText || '';
 
-   // Get stock information from the card's dataset
-  const stock = data.stock;
-
   // ---- FIXED: Safely parse and populate additional details ----
   let data = {};
   try {
@@ -967,7 +964,7 @@ productGrid.addEventListener('click', e => {
   addDetailToModal('Blouse', data.blouse);
 
   // Stock Status for Modal
-  const stock = data.stock;
+  const stock = data.stock; // Define stock *after* data is parsed
   const stockStatusText = (stock !== undefined && stock > 0) ? 'In Stock' : 'Out of Stock';
   const stockColor = (stock !== undefined && stock > 0) ? 'var(--success)' : 'var(--danger)';
   const stockEl = document.createElement('div');
@@ -1845,5 +1842,6 @@ window.location.href = 'payment.html';});
 
   </body>
 </html>
+
 
 
