--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@ button,a{
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden="true"><img src="logo.png" alt="Hamsa Sarees Logo"></div>
+        <div class="logo" aria-hidden="true"><img src="" alt="Hamsa Sarees Logo"></div>
         <div>
-          <div class="title">Hamsa Sarees<br> ! This Site Is Under Construction !</div>
-          <div class="small">Handpicked • Ethnic • Quality</div>
+          <div class="title">Hamsa Sarees</div>
+          <div class="small">Jalakandapuram-636501</div>
         </div>
       </div>
 
