--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ button,a{
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden="true"><img src="" alt="Hamsa Sarees Logo"></div>
+        <div class="logo" aria-hidden="true"><img src="hamsasareeslogo.jpg" alt="Hamsa Sarees Logo"></div>
         <div>
           <div class="title">Hamsa Sarees</div>
           <div class="small">Jalakandapuram-636501</div>
